tests/toy/neg/000547_mutation.toylang
program a = { a = a + a while; } .
